--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+<RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="24dp"
+            tools:context=".MainActivity">
+
+    <EditText
+            android:id="@+id/edit_num1"
+            android:layout_width="120dp"
+            android:layout_height="64dp"
+            android:layout_alignParentTop="true"/>
+
+    <EditText
+            android:id="@+id/edit_operator"
+            android:layout_width="120dp"
+            android:layout_height="64dp"
+            android:layout_toEndOf="@+id/edit_num1"/>
+
+    <EditText
+            android:id="@+id/edit_num2"
+            android:layout_width="120dp"
+            android:layout_height="64dp"
+            android:layout_toEndOf="@+id/edit_operator"/>
+
+    <Button
+            android:id="@+id/btn_calc"
+            android:layout_width="120dp"
+            android:layout_height="64dp"
+            android:layout_below="@+id/edit_num2"
+            android:text="@string/calc"/>
 
     <TextView
+            android:id="@+id/text_answer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_below="@+id/btn_calc"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+            android:id="@+id/text_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_red_light"
+            android:layout_below="@+id/text_answer"/>
+
+</RelativeLayout>
